--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<title>MIS.W記事一覧</title>
-</head>
+    <head>
+	   <meta charset="UTF-8">
+	   <title>MIS.W記事一覧</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="./css/reset.css">
+        <link rel="stylesheet" type="text/css" href="./css/main.css">
+    </head>
 
-<body>
-  <h1>MIS.W記事一覧</h1>
-  <li><a href="https://misw.github.io/markdown/mis_github.html" target="_blank">GitHubアカウント作成ガイド</a></li>
-  <li><a href="https://misw.github.io/markdown/mis_sourcetree.html" target="_blank">Sourcetreeインストールガイド(Mac版)</a></li>
-  <li><a href="https://misw.github.io/markdown/mis_sourcetree2.html" target="_blank">Sourcetree使い方、Git関連</a></li>
-  <li><a href="https://misw.github.io/markdown/mis_unity.html" target="_blank">Unityインストールガイド(Mac版)</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-  <li><a href="#" target="_blank">hege</a></li>
-</body>
+    <body>
+        <h1>MIS.W記事一覧</h1>
+        <div class="container">
+            <li><a href="https://misw.github.io/markdown/mis_github.html" target="_blank">GitHubアカウント作成ガイド</a></li>
+            <li><a href="https://misw.github.io/markdown/mis_sourcetree.html" target="_blank">Sourcetreeインストールガイド(Mac版)</a></li>
+            <li><a href="https://misw.github.io/markdown/mis_sourcetree2.html" target="_blank">Sourcetree使い方、Git関連</a></li>
+            <li><a href="https://misw.github.io/markdown/mis_unity.html" target="_blank">Unityインストールガイド(Mac版)</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="#" target="_blank">hege</a></li>
+            
+        </div>
+    </body>
 </html>
