--- a/c_practice.html
+++ b/c_practice.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
 	   <meta charset="UTF-8">
-	   <title>MIS.W記事一覧</title>
+	   <title>C言語入門記事一覧</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" type="text/css" href="./css/reset.css">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
@@ -11,7 +11,7 @@
     <body>
         <h1>C言語入門記事一覧</h1>
         <div class="container">
-            <li><a href="https://misw.github.io/markdown/Clang/1-1(printfについて).md" target="_blank">GitHubアカウント作成ガイド</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/1-1(printfについて).html" target="_blank">1-1(printfについて)</a></li>
             <li><a href="https://misw.github.io/markdown/mis_sourcetree.html" target="_blank">Sourcetreeインストールガイド(Mac版)</a></li>
             <li><a href="https://misw.github.io/markdown/mis_sourcetree2.html" target="_blank">Sourcetree使い方、Git関連</a></li>
             <li><a href="https://misw.github.io/markdown/mis_unity.html" target="_blank">Unityインストールガイド(Mac版)</a></li>
