C言語入門サイト追加

--- a/c_practice.html
+++ b/c_practice.html
@@ -12,22 +12,68 @@
         <h1>C言語入門記事一覧</h1>
         <div class="container">
             <li><a href="https://misw.github.io/markdown/Clang/1-1(printfについて).html" target="_blank">1-1(printfについて)</a></li>
-            <li><a href="https://misw.github.io/markdown/mis_sourcetree.html" target="_blank">Sourcetreeインストールガイド(Mac版)</a></li>
-            <li><a href="https://misw.github.io/markdown/mis_sourcetree2.html" target="_blank">Sourcetree使い方、Git関連</a></li>
-            <li><a href="https://misw.github.io/markdown/mis_unity.html" target="_blank">Unityインストールガイド(Mac版)</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
-            <li><a href="#" target="_blank">hege</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/1-2(printfとintについて）.html" target="_blank">1-2(printfとintについて）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/1-3(printfと簡単な計算について).html" target="_blank">1-3(printfと簡単な計算について)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/1-4(練習問題).html" target="_blank">1-4(練習問題)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/1-5(練習問題)解答.html" target="_blank">1-5(練習問題)解答</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-1(インクメントとデクリメント).html" target="_blank">2-1(インクメントとデクリメント)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-2(forループ).html" target="_blank">2-2(forループ)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-3(forのサンプルコード).html" target="_blank">2-3(forのサンプルコード)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-4(forを用いた累乗の計算).html" target="_blank">2-4(forを用いた累乗の計算)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-5(forを用いた階乗の計算).html" target="_blank">2-5(forを用いた階乗の計算)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-6(+=,-=を用いたforループ).html" target="_blank">2-6(+=,-=を用いたforループ)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-7(練習問題).html" target="_blank">2-7(練習問題)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/2-7(練習問題)解答.html" target="_blank">2-7(練習問題)解答</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/3-1(scanfについて).html" target="_blank">3-1(scanfについて)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/3-2(長方形の面積を求めるプログラム).html" target="_blank">3-2(長方形の面積を求めるプログラム)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/3-3(double型について).html" target="_blank">3-3(double型について)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/3-4(scanfとforループを組み合わせる）.html" target="_blank">3-4(scanfとforループを組み合わせる）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/3-5(練習問題).html" target="_blank">3-5(練習問題)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/3-6(練習問題)解答.html" target="_blank">3-6(練習問題)解答</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-1(if文 == について).html" target="_blank">4-1(if文 == について)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-2(if,else文について).html" target="_blank">4-2(if,else文について)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-3(!= について).html" target="_blank">4-3(!= について)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-4(if,else ifについて).html" target="_blank">4-4(if,else ifについて)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-5(偶数奇数判定）.html" target="_blank">4-5(偶数奇数判定）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-6(ifとforを組み合わせる).html" target="_blank">4-6(ifとforを組み合わせる)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-7(最大値を求める).html" target="_blank">4-7(最大値を求める)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-8(練習問題).html" target="_blank">4-8(練習問題)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-9(または(or)と、かつ（and)).html" target="_blank">4-9(または(or)と、かつ（and))</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/4-10(練習問題)解答.html" target="_blank">4-10(練習問題)解答</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/5-1(配列の基本）.html" target="_blank">5-1(配列の基本）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/5-2(配列の代入の仕方）.html" target="_blank">5-2(配列の代入の仕方）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/5-3(配列とforループの相性の良さ）.html" target="_blank">5-3(配列とforループの相性の良さ）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/5-4(二重配列).html" target="_blank">5-4(二重配列)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/5-5(二重配列の宣言代入).html" target="_blank">5-5(二重配列の宣言代入)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/5-6(二重配列と二重ループ).html" target="_blank">5-6(二重配列と二重ループ)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/5-7(配列とscanf).html" target="_blank">5-7(配列とscanf)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/6-1(char型の基本）.html" target="_blank">6-1(char型の基本）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/6-2(char型で文章を作る。).html" target="_blank">6-2(char型で文章を作る。)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/6-3(char型の配列の要素。).html" target="_blank">6-3(char型の配列の要素。)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/7-1(includeの本当の意味).html" target="_blank">7-1(includeの本当の意味)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/7-2(sqrt関数,平方根).html" target="_blank">7-2(sqrt関数,平方根)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/7-3(三角関数,sin cos tan).html" target="_blank">7-3(三角関数,sin cos tan)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/8-1(命令をまとめる).html" target="_blank">8-1(命令をまとめる)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/8-2(まとめた命令を繰り返し使う。).html" target="_blank">8-2(まとめた命令を繰り返し使う。)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/8-3(引数,値を返す関数,int型。).html" target="_blank">8-3(引数,値を返す関数,int型。)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/8-4(double型の関数).html" target="_blank">8-4(double型の関数)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/8-5(引数を二つとる関数).html" target="_blank">8-5(引数を二つとる関数)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/8-6(練習問題).html" target="_blank">8-6(練習問題)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/8-7(練習問題)解答.html" target="_blank">8-7(練習問題)解答</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/9-1(ポインタの基礎）.html" target="_blank">9-1(ポインタの基礎）</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/9-2(変数交換関数).html" target="_blank">9-2(変数交換関数)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/forの練習問題.html" target="_blank">forの練習問題</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/forの練習問題(解答).html" target="_blank">forの練習問題(解答)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/if,if-else else ifの練習問題.html" target="_blank">if,if-else else ifの練習問題</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/if,if-else else ifの練習問題(解答).html" target="_blank">if,if-else else ifの練習問題(解答)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/scanfと計算の練習問題.html" target="_blank">scanfと計算の練習問題</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/scanfと計算の練習問題(解答).html" target="_blank">scanfと計算の練習問題(解答)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/関数の練習問題.html" target="_blank">関数の練習問題</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/関数の練習問題(解答).html" target="_blank">関数の練習問題(解答)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/配列の練習問題.html" target="_blank">配列の練習問題</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/配列の練習問題(解答).html" target="_blank">配列の練習問題(解答)</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/変数の練習問題.html" target="_blank">変数の練習問題</a></li>
+            <li><a href="https://misw.github.io/markdown/Clang/変数の練習問題(解答).html" target="_blank">変数の練習問題(解答)</a></li>
 
         </div>
     </body>
