--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
             <li><a href="https://misw.github.io/markdown/mis_unity_mac.html" target="_blank">Unityインストールガイド(Mac版)</a></li>
             <li><a href="https://misw.github.io/markdown/mis_unity_win.html" target="_blank">Unityインストールガイド(Windows版)</a></li>
             <li><a href="https://misw.github.io/markdown/mis_xcode.html" target="_blank">Xcodeインストールガイド</a></li>
+            <li><a href="#" target="_blank">追加待ち</a></li>
             <!-- <li><a href="#" target="_blank">hoge</a></li>
             <li><a href="#" target="_blank">hoge</a></li>
-            <li><a href="#" target="_blank">hoge</a></li>
             <li><a href="#" target="_blank">hoge</a></li> -->
+            <li><a href="https://misw.github.io/c_practice.html" target="_blank">C言語入門記事一覧</a></li>
+            <li><a href="https://misw.github.io/markdown/mis_cccprimer.html" target="_blank">C#入門(サイトリンク+α)</a></li>
             <li><a href="https://misw.github.io/markdown/mis_twitter.html" target="_blank">今すぐフォローすべきツイッタラー8選</a></li>
             <li><a href="https://misw.github.io/markdown/mis_ruby_bot.html" target="_blank">おしゃべりBotを作ろう</a></li>
-            <li><a href="https://misw.github.io/markdown/mis_cccprimer.html" target="_blank">C#入門(サイトリンク+α)</a></li>
-            <li><a href="https://misw.github.io/c_practice.html" target="_blank">C言語入門記事一覧</a></li>
+            
+
         </div>
     </body>
 </html>
