mis_python_javascript 追加

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="https://misw.github.io/markdown/mis_unity_mac.html" target="_blank">Unityインストールガイド(Mac版)</a></li>
             <li><a href="https://misw.github.io/markdown/mis_unity_win.html" target="_blank">Unityインストールガイド(Windows版)</a></li>
             <li><a href="https://misw.github.io/markdown/mis_xcode.html" target="_blank">Xcodeインストールガイド</a></li>
+            <li><a href="https://misw.github.io/markdown/mis_python_javascript.html" target="_blank">Python, JavaScriptの始め方</a></li>
             <li><a href="#" target="_blank">追加待ち</a></li>
             <!-- <li><a href="#" target="_blank">hoge</a></li>
             <li><a href="#" target="_blank">hoge</a></li>
