--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <li><a href="https://misw.github.io/markdown/pdf/C言語講座2017.pdf" target="_blank">C言語講座2017年度資料</a></li>
             <li><a href="https://misw.github.io/markdown/pdf/C言語講座2018.pdf" target="_blank">C言語講座2018年度資料</a></li>
             <li><a href="https://misw.github.io/markdown/mis_cccprimer.html" target="_blank">C#入門(サイトリンク+α)</a></li>
-            <li><a href="https://misw.github.io/markdown/pdf/ブロック崩し/blockbrake.html" target="_blank">ブロック崩し</a></li>
-            <li><a href="https://misw.github.io/markdown/pdf/Unity講座/unity.html" target="_blank">Unity講座</a></li>
+            <li><a href="https://misw.github.io/blockbrake.html" target="_blank">ブロック崩し</a></li>
+            <li><a href="https://misw.github.io/unity.html" target="_blank">Unity講座</a></li>
             <li><a href="https://misw.github.io/markdown/pdf/debugtool.pdf" target="_blank">デバッグツール入門</a></li>
             <li><a href="https://misw.github.io/markdown/pdf/統計学.pdf" target="_blank">統計班詳細</a></li>
             <li><a href="https://misw.github.io/markdown/pdf/VBA講座.pdf" target="_blank">VBA入門</a></li>
