--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-	   <meta charset="UTF-8">
-	   <title>プログラミング研究会資料置き場</title>
+        <meta charset="UTF-8">
+        <title>プログラミング研究会資料置き場</title>
+        <meta name="description" content="MIS.W　プログラミング研究会の記事置き場">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="icon" href="./images/misw_logo.ico">
         <link rel="stylesheet" type="text/css" href="./css/reset.css">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
     </head>
