--- a/unity_pra.html
+++ b/unity_pra.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-	   <meta charset="UTF-8">
-	   <title>Unity講座一覧</title>
+        <meta charset="UTF-8">
+        <title>Unity講座一覧</title>
+        <meta name="description" content="MIS.W　Unity講座">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="icon" href="./images/misw_logo.ico">
         <link rel="stylesheet" type="text/css" href="./css/reset.css">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
     </head>
 
     <body>
         <h1>Unity講座一覧</h1>
-        <div class="container">
-            <li><a href="https://misw.github.io/markdown/pdf/Unity講座/unity講座1_1.pdf" target="_blank">Unity講座1_1</a></li>
-            <li><a href="https://misw.github.io/markdown/pdf/Unity講座/unity講座1_2.pdf" target="_blank">Unity講座1_1</a></li>
-            <li><a href="https://misw.github.io/markdown/pdf/Unity講座/unity講座2.pdf" target="_blank">Unity講座2</a></li>
-
+        <div class="Container">
+            <div>
+                <li><a href="https://misw.github.io/markdown/pdf/Unity講座/unity講座1_1.pdf" target="_blank">Unity講座1_1</a></li>
+                <li><a href="https://misw.github.io/markdown/pdf/Unity講座/unity講座1_2.pdf" target="_blank">Unity講座1_1</a></li>
+                <li><a href="https://misw.github.io/markdown/pdf/Unity講座/unity講座2.pdf" target="_blank">Unity講座2</a></li>
+            </div>
         </div>
     </body>
 </html>
