初めて見る人のためのガイドを作成

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="Introduction">
             <p>ようこそプログラミング研究会へ！</p>
             <p>ここではプログラミングを学ぶための資料を見ることができます。</p>
-            <a href="#" target="_blank">初めての方はこちら</a>
+            <a href="https://misw.github.io/markdown/guide.html" target="_blank">初めての方はこちら</a>
         </div>
         <div class="Container">
             <div class="Setup">
