--- a/markdown/mis_python_javascript.html
+++ b/markdown/mis_python_javascript.html
@@ -2354,8 +2354,7 @@ function draw() {
     </main>
     <div class="connection-status-box">
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.min.js" integrity="sha256-OI3N9zCKabDov2rZFzl8lJUXCcP7EmsGcGoP6DMXQCo=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.0.0/dist/fetch.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.5/platform.min.js" integrity="sha256-a5JlAx3qX6Rkvx+38zcjAPQLDQVUIwwwUeOrlDQ5W8s=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js" integrity="sha256-aYTdUrn6Ow1DDgh5JTc3aDGnnju48y/1c8s1dgkYPQ8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/languages/typescript.min.js" integrity="sha256-LWmmFG1DeNLUUp0G4vr7vjaHOEFAvzYZ9exFbHFvg8w=" crossorigin="anonymous"></script>
     <script>hljs.initHighlightingOnLoad();</script>
@@ -2402,6 +2401,16 @@ var enableAllButtons = function () {
 };
 Array.prototype.forEach.call(document.getElementsByClassName("questionnaire"), function (questionnaire) {
     if (!(questionnaire instanceof HTMLElement)) {
+        return;
+    }
+    if (window.platform.name !== "Chrome" &&
+        window.platform.name !== "Firefox" &&
+        window.platform.name !== "Microsoft Edge") {
+        // Safariは動作確認できないのでIEと同じ処理
+        var parent_1 = questionnaire.parentElement;
+        if (parent_1) {
+            parent_1.removeChild(questionnaire);
+        }
         return;
     }
     Array.prototype.forEach.call(questionnaire.getElementsByTagName("button"), function (button) {
