--- a/markdown/mis_python_javascript.html
+++ b/markdown/mis_python_javascript.html
@@ -2407,10 +2407,7 @@ Array.prototype.forEach.call(document.getElementsByClassName("questionnaire"), f
         window.platform.name !== "Firefox" &&
         window.platform.name !== "Microsoft Edge") {
         // Safariは動作確認できないのでIEと同じ処理
-        var parent_1 = questionnaire.parentElement;
-        if (parent_1) {
-            parent_1.removeChild(questionnaire);
-        }
+        questionnaire.innerHTML = "";
         return;
     }
     Array.prototype.forEach.call(questionnaire.getElementsByTagName("button"), function (button) {
