--- a/markdown/mis_python_javascript.html
+++ b/markdown/mis_python_javascript.html
@@ -1247,24 +1247,29 @@ body.dark .hljs-deletion,
 body.dark .hljs-meta {
     color: #e4e4e4
 }</style>
-    <style>body.dark, body.dark .markdown-body pre {
-    background: rgb(46, 74, 105);
+    <style>body.dark {
+    background: rgb(22, 37, 53);
 }
+
 body.dark .markdown-body pre {
     border: white 1px solid;
+    background: black;
+    padding: 0;
 }
-body.dark, body.dark .markdown-body {
+
+body.dark,
+body.dark .markdown-body {
     color: rgb(236, 236, 236);
 }
+
 body.dark .markdown-body table tr,
 body.dark .markdown-body table td {
-    background: rgb(46, 74, 105);
+    background: transparent;
 }
 
 body.dark .markdown-body a {
     color: #cee5ff;
-}
-</style>
+}</style>
 </head>
 <body>
     <main class="markdown-body">
@@ -2665,14 +2670,38 @@ Array.prototype.forEach.call(document.getElementsByClassName("light-mode-button"
     if (!(el instanceof HTMLElement)) {
         return;
     }
-    el.addEventListener("click", function () { return document.body.classList.remove("dark"); });
+    el.addEventListener("click", function () {
+        document.body.classList.remove("dark");
+        try {
+            localStorage.setItem("theme", "light");
+        }
+        catch (e) {
+            console.log(e);
+        }
+    });
 });
 Array.prototype.forEach.call(document.getElementsByClassName("dark-mode-button"), function (el) {
     if (!(el instanceof HTMLElement)) {
         return;
     }
-    el.addEventListener("click", function () { return document.body.classList.add("dark"); });
+    el.addEventListener("click", function () {
+        document.body.classList.add("dark");
+        try {
+            localStorage.setItem("theme", "dark");
+        }
+        catch (e) {
+            console.log(e);
+        }
+    });
 });
+try {
+    if (localStorage.getItem("theme") === "dark") {
+        document.body.classList.add("dark");
+    }
+}
+catch (e) {
+    console.log(e);
+}
 </script>
 </body>
 </html>
